# AI-Stock-Predictor

./: .gitattributes  .gitignore  AI_Stock_Predictor_Idea_Deck.pptx  PowerPoint_Slide_Outline.md  README.md  package-lock.json  requirements.txt  setup_pipeline.py
data/: holidays.csv  inventory.csv  merged.csv  predictions.csv  sales.csv  store_locations.csv  weather.csv
features/: train_data.csv
frontend/: README.md  package-lock.json  package.json
frontend/public/: forecast_daily.csv  index.html
frontend/src/: App.css  App.js  Dashboard.js  Forecast.js  LoginPage.js  MapRoute.js
frontend/src/context/: AuthContext.js
models/: sales_model.pkl
outputs/: alerts.csv  anomalies.csv  interstore_transfers.csv  model_metrics.json  predictions.csv  route_summary.csv  routing_strategy_comparison.csv  summary.html
rust-gateway/: Cargo.toml
rust-gateway/src/: main.rs
src/: anomaly_detection.py  build_features.py  check_model.py  email_alerts.py  evaluate_model.py  forecast_and_detect.py  forecast_demand.py  generate_data.py  generate_inventory.py  generate_routing_strategy_comparison.py  generate_sample_data.py  inter_store_rebalancing.py  map_route_dashboard.py  map_route_visualizer.py  merge_data.py  route_simulation.py  serve_api.py  store_location.py  train_model.py  train_model_lgbm.py
